fixed font size and button mobile alignment

--- a/sass/base/components/form/_standard-form.scss
+++ b/sass/base/components/form/_standard-form.scss
@@ -17,7 +17,7 @@ legend,
   padding-top: 10px;
   margin-bottom: 12px;
   font-family: $body-font;
-  @include font-size($p-large-font-size);
+  @include font-size($p-font-size);
 }
 
 fieldset {
@@ -44,7 +44,7 @@ input[type="password"],
   box-sizing: border-box;
   appearance: none;
   @include placeholder($colour-scorpion-grey, 18px , $font-regular);
-  @include font-size($p-large-font-size);
+  @include font-size($p-font-size);
 }
 
 textarea {
@@ -72,7 +72,7 @@ select {
   padding: 12px 50px 8px 10px;
   width: 100%;
   height: 50px;
-  @include font-size($p-large-font-size);
+  @include font-size($p-font-size);
   font-weight: 300;
   font-family: $body-font;
   background: transparent url($image-path + "drop-down-dark-purple.svg") calc(100% - 20px) 18px/20px 20px no-repeat;
@@ -141,7 +141,7 @@ button:disabled {
 }
 
 label {
-  font-weight: bold;
+  font-family: $font-bold;
 }
 
 .form-help-text {
@@ -156,8 +156,8 @@ label {
 }
 
 .form__fieldset--label {
+  @include font-size($p-font-size);
   font-family: $body-font;
-  @include font-size($p-large-font-size);
   font-weight:bold;
 }
 
@@ -206,6 +206,7 @@ label {
   &.form__checkbox--inline,
   &.form__radio--inline {
     width: span(12);
+    margin-bottom: 18px;
   }
 
   input[type="checkbox"], 
@@ -273,7 +274,7 @@ label {
 
   input[type="radio"]:checked + span {
     background-color: $colour-persian-purple;
-    border: 1px solid transparent;
+    border: 1px solid $colour-persian-purple;
   }
 
   input[type="radio"]:checked + span:before {
